[package]
name = "github-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
# Applied https://github.com/oxidecomputer/third-party-api-clients/pull/25 to 0.7.0
octorust = { git = "https://github.com/tvh/third-party-api-clients.git", rev = "476baeb17254f99231bfa6504cefc72c2e1ebd55" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
